# adaptive_hand_model

./: .gitignore  README.md  hparam1.txt  hparam2.txt  hparam_abb.txt  nn_functions.py  nn_run.py  nn_run_hparam.py  nn_run_nmarkov.py  nonlinear_regression_2d_raw.py  nonlinear_regression_template.py
data/: Ca_25_test_1.db  Ca_25_test_2.db  Ca_25_test_3.db  Ca_25_test_4.db  Ca_25_test_5.db  Ca_25_test_6.db  Ca_25_test_7.db  Ca_25_test_8.db  Ca_25_train_1.db  Ca_35_1.mat  Cb_25_5.mat  Cc_20_1.mat  Cd_20_8.mat  GenToyData.m  c_2018-07-20-17-56-00_22-07-2018 02:00:29.txt  c_25_14.txt  c_25_15.txt  c_25_16.txt  c_25_2.txt  c_25_22.txt  c_25_3.txt  c_25_30.txt  c_25_33.txt  c_25_34.txt  c_25_36.txt  c_25_41.txt  c_25_50.txt  c_25_51.txt  c_25_52.txt  c_25_53.txt  c_25_58.txt  c_25_61.txt  c_25_63.txt  c_25_66.txt  c_25_67.txt  c_25_70.txt  c_25_71.txt  c_25_74.txt  c_25_77.txt  c_25_8.txt  (+98 more)
gp_shogun/: KDTreeVectorOfVectorsAdaptor.h  gp_transition _model.h  gp_transition_model.cpp  makefile  t  to
gp_shogun/test_shogun/: CMakeLists.txt  compare1d.m  compare2d.m  data.txt  makefile  t  test1d.cpp  test2d.cpp
matlab/: Net.m  net_rep.m  simu.m  simu_nmarkov.m
models/: checkpoint  cp.ckpt.data-00000-of-00001  cp.ckpt.index  cp_temp.ckpt.data-00000-of-00001  cp_temp.ckpt.index  hcp.ckpt.index  hparam.txt  net1.netxt  net1_w10.netxt  net2.netxt  net2_w10.netxt  net2_w3.netxt  net4.netxt  net5.netxt  net6.netxt
nn/: NN_dist_20.mat  compare2jacob.m  dist.m  net_rep.m  nn_run.py  nn_run_allModes.py  nn_run_hparam.py  pred20.m  predict_nn.py  simu.m  simu_nmarkov.m
(+1743 files in other folders)
